--- a/AISWorkGroup/AISWorkGroup.csproj
+++ b/AISWorkGroup/AISWorkGroup.csproj
@@ -48,11 +48,23 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="View\Employee%27s Forms\FormEditingReport.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\Employee%27s Forms\FormEditingReport.Designer.cs">
+      <DependentUpon>FormEditingReport.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\Employee%27s Forms\FormEmployeeMain.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="View\Employee%27s Forms\FormEmployeeMain.Designer.cs">
       <DependentUpon>FormEmployeeMain.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\Employee%27s Forms\FormGroupInfo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\Employee%27s Forms\FormGroupInfo.Designer.cs">
+      <DependentUpon>FormGroupInfo.cs</DependentUpon>
     </Compile>
     <Compile Include="View\General Forms\FormAuthorization.cs">
       <SubType>Form</SubType>
@@ -60,11 +72,53 @@
     <Compile Include="View\General Forms\FormAuthorization.Designer.cs">
       <DependentUpon>FormAuthorization.cs</DependentUpon>
     </Compile>
+    <Compile Include="View\Employee%27s Forms\FormTaskWithReport.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\Employee%27s Forms\FormTaskWithReport.Designer.cs">
+      <DependentUpon>FormTaskWithReport.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\Manager%27s Forms\FormAddingNewTask.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\Manager%27s Forms\FormAddingNewTask.Designer.cs">
+      <DependentUpon>FormAddingNewTask.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\Manager%27s Forms\FormChangeSelectedTask.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\Manager%27s Forms\FormChangeSelectedTask.Designer.cs">
+      <DependentUpon>FormChangeSelectedTask.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\Manager%27s Forms\FormChangeSelectedWorkGroup.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\Manager%27s Forms\FormChangeSelectedWorkGroup.Designer.cs">
+      <DependentUpon>FormChangeSelectedWorkGroup.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\Manager%27s Forms\FormGroupInfo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\Manager%27s Forms\FormGroupInfo.Designer.cs">
+      <DependentUpon>FormGroupInfo.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\Manager%27s Forms\FormManagerMain.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="View\Manager%27s Forms\FormManagerMain.Designer.cs">
       <DependentUpon>FormManagerMain.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\Manager%27s Forms\FormSelectedEmployeeInfo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\Manager%27s Forms\FormSelectedEmployeeInfo.Designer.cs">
+      <DependentUpon>FormSelectedEmployeeInfo.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\Manager%27s Forms\FormTaskWithReport.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\Manager%27s Forms\FormTaskWithReport.Designer.cs">
+      <DependentUpon>FormTaskWithReport.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -75,14 +129,41 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="View\Employee%27s Forms\FormEditingReport.resx">
+      <DependentUpon>FormEditingReport.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="View\Employee%27s Forms\FormEmployeeMain.resx">
       <DependentUpon>FormEmployeeMain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\Employee%27s Forms\FormGroupInfo.resx">
+      <DependentUpon>FormGroupInfo.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\General Forms\FormAuthorization.resx">
       <DependentUpon>FormAuthorization.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="View\Employee%27s Forms\FormTaskWithReport.resx">
+      <DependentUpon>FormTaskWithReport.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\Manager%27s Forms\FormAddingNewTask.resx">
+      <DependentUpon>FormAddingNewTask.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\Manager%27s Forms\FormChangeSelectedTask.resx">
+      <DependentUpon>FormChangeSelectedTask.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\Manager%27s Forms\FormChangeSelectedWorkGroup.resx">
+      <DependentUpon>FormChangeSelectedWorkGroup.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\Manager%27s Forms\FormGroupInfo.resx">
+      <DependentUpon>FormGroupInfo.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="View\Manager%27s Forms\FormManagerMain.resx">
       <DependentUpon>FormManagerMain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\Manager%27s Forms\FormSelectedEmployeeInfo.resx">
+      <DependentUpon>FormSelectedEmployeeInfo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\Manager%27s Forms\FormTaskWithReport.resx">
+      <DependentUpon>FormTaskWithReport.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
