added personal information system and started work at DB/Manager's forms

--- a/AISWorkGroup/AISWorkGroup.csproj
+++ b/AISWorkGroup/AISWorkGroup.csproj
@@ -94,6 +94,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Model\DBConnector.cs" />
+    <Compile Include="Model\GlobalVariables.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="View\Employee%27s Forms\FormEditingReport.cs">
