--- a/AISWorkGroup/AISWorkGroup.csproj
+++ b/AISWorkGroup/AISWorkGroup.csproj
@@ -97,6 +97,12 @@
     <Compile Include="Model\GlobalVariables.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="View\Employee%27s Forms\FormAddingReport.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\Employee%27s Forms\FormAddingReport.Designer.cs">
+      <DependentUpon>FormAddingReport.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\Employee%27s Forms\FormEditingReport.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -175,11 +181,11 @@
     <Compile Include="View\Manager%27s Forms\FormSelectedEmployeeInfo.Designer.cs">
       <DependentUpon>FormSelectedEmployeeInfo.cs</DependentUpon>
     </Compile>
-    <Compile Include="View\Manager%27s Forms\FormTaskWithReport.cs">
+    <Compile Include="View\Manager%27s Forms\FormTaskWithReportManager.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="View\Manager%27s Forms\FormTaskWithReport.Designer.cs">
-      <DependentUpon>FormTaskWithReport.cs</DependentUpon>
+    <Compile Include="View\Manager%27s Forms\FormTaskWithReportManager.Designer.cs">
+      <DependentUpon>FormTaskWithReportManager.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -190,6 +196,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="View\Employee%27s Forms\FormAddingReport.resx">
+      <DependentUpon>FormAddingReport.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="View\Employee%27s Forms\FormEditingReport.resx">
       <DependentUpon>FormEditingReport.cs</DependentUpon>
     </EmbeddedResource>
@@ -229,8 +238,8 @@
     <EmbeddedResource Include="View\Manager%27s Forms\FormSelectedEmployeeInfo.resx">
       <DependentUpon>FormSelectedEmployeeInfo.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="View\Manager%27s Forms\FormTaskWithReport.resx">
-      <DependentUpon>FormTaskWithReport.cs</DependentUpon>
+    <EmbeddedResource Include="View\Manager%27s Forms\FormTaskWithReportManager.resx">
+      <DependentUpon>FormTaskWithReportManager.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
